# beansML

./: README.md  labels.csv  pyproject.toml
notebooks/: 02_multilayer_perceptron.ipynb  03_xgboost.ipynb  lvm.ipynb
