[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.65.0"
torch = "^2.0.0"
torchvision = "^0.15.1"
numpy = "^1.24.3"
scikit-learn = "^1.2.2"
jupyter = "^1.0.0"
xgboost = "^1.7.5"
pandas = "^2.0.1"
ipykernel = "^6.22.0"
openpyxl = "^3.1.2"
torchview = "^0.2.6"
torchmetrics = "^0.11.4"
seaborn = "^0.12.2"
graphviz = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
